hard-gists/191d15e28c39246a2525/run.log
=== Docker Run Log for 191d15e28c39246a2525 ===
Started at: Mi 29. Okt 12:34:14 CET 2025

[2025-10-29 12:34:14] START: Running container for 191d15e28c39246a2525
[2025-10-29 12:34:15] SUCCESS: Container a6bb5075d1881e81b858de80b349fc17ff8a4763c961174d804335209559d3b5 started for 191d15e28c39246a2525
=== Container logs for 191d15e28c39246a2525 ===
  File "/snippet.py", line 32
    except requests.HTTPError, e:
           ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 191d15e28c39246a2525 ===
[2025-10-29 12:34:17] INFO: Container a6bb5075d1881e81b858de80b349fc17ff8a4763c961174d804335209559d3b5 has stopped
